# miso-invaders

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  cabal.project  default.nix  flake.nix  miso-invaders.cabal  shell.nix
archive/: Dockerfile
archive/proto/: proto.cabal  proto2.hs  proto3.hs  proto4.hs
old/: Game.hs  Main.hs  Mario.hs
proto/: proto2.hs  proto3.hs  proto5.hs
src/: Audio.hs  Game.hs  Main.hs  Model.hs  old.hs  old2.hs
static/: index.html  index.js
