cabal-version:          3.0
name:                   miso-invaders
version:                0.2

executable miso-invaders
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:        Audio Game Model
  build-depends:        base, containers, jsaddle, lens, linear, miso, mtl, random
  default-language:     GHC2021
  ghc-options:          -Wall -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start" -ddump-splices
  cpp-options:          -DWASM
  default-extensions:   CPP TemplateHaskell 
 
