name:               proto
version:            0.1
build-type:         Simple
cabal-version:      >=1.10

executable proto1
    main-is:            proto1.hs
    ghc-options:        -O -Wall
    ghcjs-options:      -dedupe
    build-depends:      base, ghcjs-base, miso
    default-language:   Haskell2010

executable proto2
    main-is:            proto2.hs
    ghc-options:        -O -Wall
    ghcjs-options:      -dedupe
    build-depends:      base, containers, ghcjs-base, miso
    default-language:   Haskell2010

executable proto3
    main-is:            proto3.hs
    ghc-options:        -O -Wall
    ghcjs-options:      -dedupe
    build-depends:      base, containers, ghcjs-base, miso
    default-language:   Haskell2010

executable proto4
    main-is:            proto4.hs
    ghc-options:        -O -Wall
    ghcjs-options:      -dedupe
    build-depends:      base, containers, ghcjs-base, miso
    default-language:   Haskell2010

executable proto5
    main-is:            proto5.hs
    ghc-options:        -O -Wall
    ghcjs-options:      -dedupe
    build-depends:      base, miso, random
    default-language:   Haskell2010

